--- a/src/components/ProfileDropdown/ProfileDropdown.css
+++ b/src/components/ProfileDropdown/ProfileDropdown.css
@@ -1,34 +1,32 @@
 .profileDropdown {
-  --scale: 0;
-
   display: none;
   position: absolute;
-  background-color: white;
-  color: black;
+  top: 140%;
+  background-color: black;
+  border: 1px solid rgb(109 45 231);
+  color: white;
   width: 150px;
-  padding-block: 0.5rem;
   gap: 0.5rem;
   flex-direction: column;
-  transform-origin: top;
-  border-radius: 8px;
-  top: 150%;
+  z-index: 66;
   right: 0;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
 }
 
 .profileDropdown__isActive {
   display: flex;
 }
 
-.profileDropdown > span,
-.profileDropdown > a {
+.profileDropdown > span {
   width: 100%;
   text-align: center;
-  padding-block: 0.5rem;
-  text-decoration: none;
-  color: black;
+  padding-block: 0.7rem;
 }
-
-.profileDropdown > span:hover,
-.profileDropdown > a:hover {
-  background-color: hsla(0, 0%, 0%, 0.2);
+.profileDropdown span:last-of-type {
+  border: none;
+}
+.profileDropdown > span:hover {
+  background-color: rgb(109 45 231);
 }
