--- a/src/pages/Inventory/Inventory.css
+++ b/src/pages/Inventory/Inventory.css
@@ -40,8 +40,8 @@
   display: grid;
   place-items: center;
   font-size: 18px;
-  color: white;
   position: relative;
+  color: white;
   cursor: pointer;
 }
 
@@ -50,59 +50,236 @@
   cursor: pointer;
   font-size: 18px;
 }
-.inventory-bottom {
+
+.inventory__topWrapper {
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(to right, #7a35e8, #c02df0);
+  z-index: -1;
+}
+
+.inventory__top {
+  display: flex;
+  flex-direction: column;
+  padding: 0.75rem 0.5rem;
+  gap: 0.5rem;
   width: 100%;
   max-width: var(--max-width);
+}
+
+.inventory__topUp {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: column;
-  margin: 20px auto;
-  padding-inline: 20px;
+  color: white;
 }
-.coin-header {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  color: #9b9b9b;
-  gap: 30px;
-  border-bottom: 1px solid #ccc;
+
+.inventory__topUp > h1 {
+  font-size: 22px;
+  font-weight: 600;
 }
-.coin-header p {
-  width: 100px;
-  padding-bottom: 10px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 5px;
-  font-size: 18px;
-  position: relative;
-  cursor: pointer;
-}
-.coin-header .active-coin::before {
-  content: "";
-  width: 100%;
-  height: 2px;
-  top: 100%;
-  left: 0;
-  position: absolute;
-  background-color: rgb(109 45 231);
-}
-.coin-header .active-coin {
-  color: rgb(109 45 231);
-}
-.coin-header > svg {
-  padding-bottom: 10px;
+
+.inventory__topUp > span {
   font-size: 20px;
+  font-weight: 300;
+}
+
+.inventory__topDown {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.inventory__id {
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.inventory__buy {
+  font-weight: 300;
+  text-decoration: underline;
+}
+
+.inventory__centerWrapper {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+}
+
+.inventory__center {
+  width: 100%;
+  padding: 1rem 1rem 0 1rem;
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+
+.inventory__centerTop {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.inventory__centerHeading {
+  font-size: 20px;
+  font-weight: 400;
+  min-width: 131px;
+  color: white;
+}
+
+.inventory__centerSubHeading {
+  font-size: clamp(12px, 3.5vw, 14px);
+  color: white;
+  transform: translateY(1px);
+}
+
+.inventory__empty {
+  font-size: 22px;
+  padding-block: 5rem;
+  color: white;
+  text-align: center;
+}
+
+.inventory__footerWrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.inventory__footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 600px;
+}
+
+.inventory__footer > a {
+  font-size: 10px;
+  text-align: center;
+  color: rgb(109 45 231);
+  text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   cursor: pointer;
+  gap: 0.25rem;
+  align-items: center;
+  height: 60px;
+  padding: 10px;
+  width: 100%;
+  transition: all 0.1s;
+}
+
+.inventory__footer > a > svg {
+  font-size: 18px;
+}
+
+.inventory__selected {
+  background-color: rgb(109 45 231);
+  color: white !important;
+  text-decoration: none !important;
+}
+
+.inventory__centerRight {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: var(--max-width);
+}
+
+.inventory__centerLeft {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  left: 0;
+  width: 15vw;
+  max-width: 200px;
+  background-color: hsla(261, 79%, 54%, 0.3);
+  border-radius: 0 36px 36px 0;
+  height: calc(100% - 1rem);
+}
+
+.inventory__centerLeft > a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+  color: white;
+  height: 100%;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.1s;
+  font-size: 20px;
+}
+
+.inventory__centerLeft > a:nth-child(1) {
+  border-radius: 0 36px 0 0;
+}
+
+.inventory__centerLeft > a:nth-last-child(1) {
+  border-radius: 0 0 36px 0;
+}
+
+.inventory__centerLeft span {
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.inventory__centerLeft > a:hover,
+.inventory__footer > a:hover {
+  background-color: hsla(261, 79%, 54%, 0.4);
+  color: white !important;
+}
+
+.inventory__selected:hover {
+  background-color: rgb(109 45 231) !important;
+}
+
+@media (min-width: 800px) {
+  .inventory__centerLeft {
+    display: flex;
+  }
+
+  .inventory__footer {
+    display: none;
+  }
+
+  .inventory__center {
+    padding-left: 0;
+  }
+}
+
+@media (min-width: 1400px) {
+  .inventory__centerLeft > a {
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-left: 1.25rem;
+    gap: 0.75rem;
+  }
+
+  .inventory__centerLeft > a > span {
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  .inventory__centerLeft > a > svg {
+    font-size: 22px;
+  }
 }
 .dashboard-wrap {
   display: grid;
-  width: 100%;
+  width: calc(100% - 250px);
+  margin-left: auto;
   column-gap: 30px;
-  grid-template-columns: 343px 1fr;
-  margin-top: 40px;
+  grid-template-columns: 1fr;
+
+  height: 100%;
 }
 .wallets {
   display: flex;
@@ -141,13 +318,14 @@
   padding: 20px;
   box-sizing: border-box;
   width: 100%;
-  background-color: white;
-  border-left: 7px solid rgb(109 45 231);
+  background-color: black;
+  border: 2px solid rgb(109 45 231);
   box-shadow: 0 0.125rem 0.5625rem 0 rgb(109 45 231);
 }
 .main-dash h1 {
   font-size: 20px;
   font-weight: 700;
+  color: white;
 }
 .main-dash h1 svg {
   font-size: 15px;
@@ -178,19 +356,23 @@
   width: 100%;
 }
 .col .row p {
+  color: white;
   font-size: 16px;
   font-weight: 500;
 }
 .col .row h3 {
+  color: white;
   color: rgb(109 45 231);
   font-weight: 300;
   font-size: 22px;
 }
 .col .row h3 a {
+  color: white;
   font-size: 14px;
   margin-left: 10px;
 }
 .col .row h4 {
+  color: white;
   font-size: 14px;
   font-weight: 400;
 }
@@ -235,10 +417,11 @@
 }
 @media screen and (max-width: 1186px) {
   .dashboard-wrap {
-    grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
+    margin-left: 180px;
     row-gap: 40px;
   }
+
   .wallets {
     flex-direction: row;
     justify-content: flex-start;
@@ -254,7 +437,7 @@
     margin-left: 20px;
   }
 }
-@media screen and (max-width: 842px) {
+@media screen and (max-width: 1064px) {
   .main-dash > .row {
     flex-direction: column;
     align-items: flex-start;
@@ -268,6 +451,12 @@
   }
   .col .row h4 {
     font-size: 13px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .dashboard-wrap {
+    width: 100%;
+    margin: 0px;
   }
 }
 @media screen and (max-width: 532px) {
