--- a/src/pages/Settings/Settings.css
+++ b/src/pages/Settings/Settings.css
@@ -3,8 +3,7 @@
   grid-template-columns: 300px 1fr;
   width: 100%;
   max-width: var(--max-width);
-  margin: 40px auto;
-  padding-inline: 20px;
+  margin: 10px auto;
   column-gap: 60px;
 }
 .left-settings {
@@ -13,21 +12,22 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 30px;
+  background-color: rgb(109 45 231);
+  padding: 3rem 1rem;
+  border-radius: 10px;
 }
 .left-settings a {
   color: white;
-  font-size: 20px;
   text-decoration: none;
+  font-size: 20px;
 }
 .left-settings .active-settings-link {
-  color: rgb(109 45 231);
+  text-decoration: underline;
 }
 .right-settings {
   width: 100%;
-  padding: 2rem;
   min-height: 400px;
   border-radius: 10px;
-  background-color: #969696;
   overflow-x: hidden;
 }
 .mob-icon {
@@ -36,14 +36,28 @@
 .set-overlay {
   display: none;
 }
+@media screen and (max-width: 918px) {
+  .bottom-settings {
+    grid-template-columns: auto 1fr;
+  }
+  .left-settings a {
+    font-size: 16px;
+  }
+}
 @media screen and (max-width: 856px) {
+  .bottom-settings {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+    row-gap: 30px;
+    position: relative;
+  }
+
   .left-settings {
+    width: 340px;
     position: fixed;
-    height: 100vh;
     left: -600px;
     top: 0;
-    width: 343px;
-    background-color: black;
+    height: 100%;
     padding: 4rem 2rem;
     z-index: 66;
     transition: all 0.5s ease-in-out;
@@ -60,10 +74,11 @@
     position: absolute;
     top: 2%;
     right: 4%;
+    color: white;
   }
   .set-overlay {
     position: fixed;
-    height: 100vh;
+    height: 100%;
     left: 0;
     top: 0;
     width: 100%;
@@ -72,15 +87,5 @@
   }
   .open-overlay {
     display: block;
-  }
-  .bottom-settings {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
-    row-gap: 30px;
-  }
-}
-@media screen and (max-width: 414px) {
-  .right-settings {
-    padding: 2rem 1rem;
   }
 }
