--- a/src/pages/Swap/Swap.css
+++ b/src/pages/Swap/Swap.css
@@ -9,13 +9,13 @@
   margin: 30px 0px;
   font-size: 20px;
   align-self: center;
+  color: white;
 }
 .swap-page select {
   min-width: 80px !important;
   font-size: 15px !important;
 }
-.swap-page .disabled {
-  background-color: gray;
+.swap-page .aqua-btn {
   color: white;
   max-width: 200px;
   height: 40px;
