--- a/src/pages/TwoFactor/TwoFactor.css
+++ b/src/pages/TwoFactor/TwoFactor.css
@@ -11,6 +11,7 @@
   padding-bottom: 20px;
   border-bottom: 1px solid black;
   width: 100%;
+  color: white;
 }
 .two-factor ol {
   display: flex;
@@ -23,6 +24,7 @@
 .two-factor li {
   font-weight: 600;
   font-size: 16px;
+  color: white;
 }
 .qr {
   margin-top: 30px;
@@ -34,6 +36,7 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 20px;
+  width: 100%;
 }
 .qr a {
   margin-top: 15px;
@@ -46,7 +49,7 @@
   gap: 10px;
   margin-top: 30px;
 }
-@media screen and (max-width: 574px) {
+@media screen and (max-width: 1110px) {
   .two-factor ol {
     padding-left: 1rem;
   }
@@ -56,5 +59,25 @@
   }
   .two-factor h1 {
     font-size: 20px;
+  }
+  .bottom-settings {
+    gap: 20px;
+  }
+  .btn-div {
+    width: 100%;
+    gap: 10px;
+    margin-bottom: 10px;
+    flex-direction: column;
+  }
+  .btn-div .aqua-btn {
+    max-width: none;
+    width: 100%;
+  }
+  .input-div {
+    max-width: none;
+  }
+  .input-div .input-div {
+    width: 100%;
+    max-width: none;
   }
 }
